# twitch-analytics

./: .gitignore  LICENSE  README.md  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: python-app.yml  terraform.yml
frontend/: app.py  data.py  pyproject.toml  requirements.txt
lambda/: aws_wrapper.py  pyproject.toml  twitch_metrics_updater.py  twitch_wrapper.py
lambda/tests/: placeholder_test.py  test_aws_wrapper.py  test_twitch_metrics_updater.py  test_twitch_wrapper.py
notebooks/: twitch_pipeline.sql
terraform/: .terraform.lock.hcl  backend.tf  main.tf  variable.tf
