[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Twitch dashboard frontend"
authors = ["Antony Trinh"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
databricks-sql-connector = "^3.4.0"
SQLAlchemy = "^2.0.32"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"
streamlit-aggrid = "^1.0.5"
streamlit-shadcn-ui = "^0.1.18"
streamlit-echarts = "^0.4.0"
streamlit-searchbox = "^0.1.16"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
