[tool.poetry]
name = "lambda"
version = "0.1.0"
description = "Gets the latest Twitch stream metrics and exports it to S3"
authors = ["Antony Trinh"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
boto3 = "^1.35.39"
awswrangler = "^3.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
responses = "^0.25.3"
ruff = "^0.6.9"
pytest-responses = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
